--- a/src/app/shared/detail-shared/status-badge/status-badge.component.scss
+++ b/src/app/shared/detail-shared/status-badge/status-badge.component.scss
@@ -77,6 +77,7 @@
     }
   }
 
+  &.active-serve,
   &.mounted {
     background: rgba(var(--accent-color-rgb), var(--active-opacity));
     color: var(--accent-color);
